tests/errmsgs/tcannot_capture_builtin_2.nim
discard """
  errormsg: "'chr' cannot be passed to a procvar"
  line: 6
"""

let v = (chr, )